Social Meta Tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:900|Merriweather:400,400i,900" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<meta property="og:title" content="Freelance Lifestyle Writer, Blogger & Copywriter | Adam El-Naggar">
+<meta property="og:description" content="I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content & copy.">
+<meta property="og:image" content="https://adamelnaggar.github.io/adam-writes/card.jpg">
+<meta property="og:url" content="http://adamwrites.co">
+<meta name="twitter:card" content="summary_large_image">
+<meta property="og:site_name" content="Adam Writes">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 	<script src="https://use.fontawesome.com/6c953dd7b6.js"></script>
 </head>
