add url back to meta image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta property="og:title" content="Freelance Lifestyle Writer, Blogger & Copywriter | Adam El-Naggar">
 <meta property="og:description" content="I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content & copy.">
-<meta property="og:image" content="card.jpg">
+<meta property="og:image" content="http://adamwrites.co/card.jpg">
 <meta property="og:url" content="http://adamwrites.co">
 <meta name="twitter:card" content="summary_large_image">
 <meta property="og:site_name" content="Adam Writes">
