Replace Insta with Twitter

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Do you need regular writing to stay connected to your customers, but don’t hav
 </div>
 
 <div class="social">
-	<a href="https://instagram.com/adamwritesco" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+	<a href="https://twitter.com/adamelnaggar_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 	<a href="https://linkedin.com/in/adamelnaggar" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 </div>
 
