copy, add hover effect on email link

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ Here are some examples of my writing:
 </div>
 
 <p>
-When I’m not writing, I run a <a href="https://northseasurfshots.co.uk" target="_blank">surf photography business</a>. Before that, I fought crime in the Police and saved lives as a lifeguard. If you’ve watched Baywatch, you know what I’m talking about.. have a look at my <a href="https://www.dropbox.com/s/td81mcym3s3z6ig/cv-adamwrites.pdf?dl=0" target="_blank">C.V.</a>
+When I’m not writing, I run a little <a href="https://northseasurfshots.co.uk" target="_blank">surf photography business</a>. Before that, I fought crime in the Police and saved lives as a lifeguard. If you’ve watched Baywatch, you know what I’m talking about.. have a look at my <a href="https://www.dropbox.com/s/td81mcym3s3z6ig/cv-adamwrites.pdf?dl=0" target="_blank">C.V.</a>
 </p>
 
 <p>
-I’m based in Aberdeen, Scotland. If I’m not driving around the Scottish coastline looking for waves, you’ll find me doing the same thing in Fuerteventura!
+I’m based in Aberdeen, Scotland, so if I’m not driving around the Scottish coastline looking for waves, you’ll find me doing the same thing in Fuerteventura!
 </p>
 
 <p>
