add marketer to title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Freelance Lifestyle Writer, Blogger & Copywriter | Adam El-Naggar</title>
+	<title>Freelance Lifestyle Writer & Marketer | Adam El-Naggar</title>
 	<meta name="description" content="I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content & copy.">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
