experiment - hover effects / colour

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <center>
 <img src="me.jpg" alt="It's me, Adam El-Naggar, your new freelance writer!" id="mobile-me">
 <div class="intro">
-	<h1>Hello. I’m <span class="hover-image">Adam</span>.<img src="me.jpg" alt="It's me, Adam El-Naggar, your new freelance writer!" id="me"></h1>
+	<h1><span class="hover-image">Hello. I’m Adam.</span><img src="me.jpg" alt="It's me, Adam El-Naggar, your new freelance writer!" id="me"></h1>
 </div>
 </center>
 
