--- a/index.html
+++ b/index.html
@@ -5,25 +5,39 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Freelance Lifestyle Writer & Marketer | Adam El-Naggar</title>
 	<meta name="description" content="I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content & copy.">
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:900|Merriweather:400,400i,900" rel="stylesheet">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,900|Merriweather:400,400i,900" rel="stylesheet">
 	<meta property="og:title" content="Freelance Lifestyle Writer, Blogger & Copywriter | Adam El-Naggar">
 <meta property="og:description" content="I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content & copy.">
-<meta property="og:image" content="http://adamwrites.co/card.jpg">
+<meta property="og:image" content="http://adamwrites.co/images/card.jpg">
 <meta property="og:url" content="http://adamwrites.co">
 <meta name="twitter:card" content="summary_large_image">
 <meta property="og:site_name" content="Adam Writes">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 	<script src="https://use.fontawesome.com/6c953dd7b6.js"></script>
 </head>
 <body>
-
+<div class="wrapper">
 <center>
-<img src="me.jpg" alt="It's me, Adam El-Naggar, your new freelance writer!" id="mobile-me">
 <div class="intro">
-	<h1><span class="hover-image">Hello. I’m Adam.</span><img src="me.jpg" alt="It's me, Adam El-Naggar, your new freelance writer!" id="me"></h1>
+	<h1><span>Hello. I’m Adam.</span></h1>
 </div>
 </center>
 
@@ -35,10 +49,10 @@ I can help your lifestyle business build a genuine connection with its audience,
 Just a few things I can help you with:
 <ul class="services">
 <li>Blog posts</li>
-<li>Brand journalism</li>
 <li>Customer case studies</li>
 <li>Website copy</li>
-<li>Email marketing</li>
+<li>Email & social media marketing</li>
+<li>Print marketing</li>
 </ul>
 </div>
 
@@ -73,8 +87,23 @@ Here are some examples of my writing:
 </ul>
 </div>
 
+<div class="projects">
+And some project case studies:
+
+<div class="projects-wrapper">
+<a href="/north-sea-case-study" class="project-link"><div class="paper">
+  <h1>North Sea Surf Shots</h1>
+ <hr class="first-line"/><hr class="second-line"/>
+  <h2>A surf photography business</h2>
+  	<img class="poster" src="images/north-sea-card.jpg"/>
+  	<span class="study-view">View the case study <i class="fa fa-long-arrow-right" aria-hidden="true"></i></span>
+</div></a>
+</div>
+
+</div>
+
 <p>
-When I’m not writing, I run a little <a href="https://northseasurfshots.co.uk" target="_blank">surf photography business</a>. Before that, I fought crime in the Police and saved lives as a lifeguard. If you’ve watched Baywatch, you know what I’m talking about.. have a look at my <a href="https://www.dropbox.com/s/td81mcym3s3z6ig/cv-adamwrites.pdf?dl=0" target="_blank">C.V.</a>
+When I’m not writing, I run a little <a href="https://northseasurfshots.co.uk" target="_blank">surf photography business</a>. Before that, I fought crime in the Police and saved lives as a lifeguard. If you’ve watched Baywatch, you know what I’m talking about.. you can have a look at my C.V. <a href="https://www.dropbox.com/s/td81mcym3s3z6ig/cv-adamwrites.pdf?dl=0" target="_blank">here</a>.
 </p>
 
 <p>
@@ -87,7 +116,7 @@ Do you need regular writing to stay connected to your customers, but don’t hav
 
 <center>
 <div class="email" id="hello">
-	<a href="mailto:hello@adamwrites.co">hello@adamwrites.co</a>
+	<a href="mailto:hello@adamwrites.co?subject=Hi Adam!">hello@adamwrites.co</a>
 </div>
 
 <div class="social">
@@ -96,6 +125,7 @@ Do you need regular writing to stay connected to your customers, but don’t hav
 </div>
 
 </center>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="moveimage.js"></script>
