Debug Facebook Sharer

--- a/north-sea-case-study.html
+++ b/north-sea-case-study.html
@@ -11,7 +11,7 @@
 	<meta property="og:title" content="North Sea Surf Shots Case Study | Adam El-Naggar">
 <meta property="og:description" content="A look at the media, marketing, and writing behind the surf photography business, North Sea Surf Shots.">
 <meta property="og:image" content="http://adamwrites.co/images/nsss-card.jpg">
-<meta property="og:url" content="http://adamwrites.co">
+<meta property="og:url" content="http://adamwrites.co/north-sea-case-study">
 <meta name="twitter:card" content="summary_large_image">
 <meta property="og:site_name" content="Adam Writes">
 <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
