--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Freelance Lifestyle Writer & Marketer | Adam El-Naggar</title>
-	<meta name="description" content="I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content & copy.">
+	<title>Freelance Writer & Content Strategist | Adam El-Naggar</title>
+	<meta name="description" content="I'll help you build a genuine connection with your audience, by creating thoroughly researched and engaging content that drives growth. Sound good? Say hi!">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,900|Merriweather:400,400i,900" rel="stylesheet">
-	<meta property="og:title" content="Freelance Lifestyle Writer, Blogger & Copywriter | Adam El-Naggar">
-<meta property="og:description" content="I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content & copy.">
+	<meta property="og:title" content="Freelance Writer & Content Strategist | Adam El-Naggar">
+<meta property="og:description" content="I'll help you build a genuine connection with your audience, by creating thoroughly researched and engaging content that drives growth. Sound good? Say hi!">
 <meta property="og:image" content="http://adamwrites.co/images/card.jpg">
 <meta property="og:url" content="http://adamwrites.co">
 <meta name="twitter:card" content="summary_large_image">
@@ -37,58 +37,52 @@
 <div class="wrapper">
 <center>
 <div class="intro">
-	<h1><span>Hello. I’m Adam.</span></h1>
+	<h1 class="hello"><span>Hello. I’m Adam.</span></h1>
+	<h2 class="titles">Content Strategist for Small Businesses</h2>
 </div>
 </center>
 
-<p>
-I can help your lifestyle business build a genuine connection with its audience, by writing thoroughly researched and engaging content. Sound good? <a href="#hello">Say hello!</a>
-</p>
+<p>I'll help you build a genuine connection with your audience, by creating thoroughly researched and engaging content that drives long-term business growth. I specialise in small business, entrepreneurship, and healthy & active lifestyle. Sound good? <a href="#hello">Say hello!</a></p>
 
 <div>
-Just a few things I can help you with:
+<h3 class="headings">Just a few things I can help you with:</h3>
 <ul class="services">
-<li>Blog posts</li>
+<li>Blog posts and headlines</li>
 <li>Customer case studies</li>
-<li>Website copy</li>
-<li>Email & social media marketing</li>
-<li>Print marketing</li>
+<li>Website copy / design</li>
+<li>Email marketing</li>
+<li>Social media management</li>
 </ul>
 </div>
 
+<!--
 <div class="clients">
-I’ve worked with some great people, like 
-</div>
-
-<div class="publications">
-I've <!--And-->written for some awesome publications, like <a href="https://medium.com/personal-growth"target="_blank">Personal Growth</a>, <a href="https://writingcooperative.com/"target="_blank">The Writing Co-operative</a>, and <a href="http://www.theinertia.com/"target="_blank">The Inertia</a>.
+I've worked with some awesome people, like
 </div>
 
 <div class="testimonials">
-Some people have said some nice things about me:
+<h3 class="headings">Some nice things they've said:</h3>
 <div class="quotes">
 	<blockquote>
 	<i class="fa fa-quote-left" aria-hidden="true"></i><p>Adam did a great job. <span>—Adam, North Sea Surf Shots</span></p>
 	</blockquote>
-	<blockquote>
-	<i class="fa fa-quote-left" aria-hidden="true"></i><p>Adam did a great job. <span>—Adam, North Sea Surf Shots</span></p>
-	</blockquote>
 </div>
 </div>
+-->
 
 <div class="clips">
-Here are some examples of my writing:
+<h3 class="headings">Here's some published work:</h3>
 <ul class="writing-examples">
-<li><a href="https://medium.com/personal-growth/write-like-nobodys-reading-42a105b72f3"target="_blank">Write Like Nobody's Reading</a></li>
-<li><a href="https://northseasurfshots.co.uk/blog/is-the-water-cold"target="_blank">Is the Water Cold?</a></li>
-<li><a href="https://medium.com/personal-growth/why-paper-books-will-never-die-9c89f43f7811"target="_blank">Why Paper Books Will Never Die</a></li>
-<li><a href="http://www.theinertia.com/surf/capturing-the-cold-beautiful-gems-of-scotland/"target="_blank">Capturing the Cold Beautiful Gems of Scotland</a></li>
-<li><a href="https://northseasurfshots.co.uk/blog/surf-snowdonia-trip-report"target="_blank">I Surf in the Mountains</a></li>
+<li><a href="http://medium.com/personal-growth/write-like-nobodys-reading-42a105b72f3"target="_blank">Write Like Nobody's Reading</a> <span class="source">—Personal Growth</span></li>
+<li><a href="http://northseasurfshots.co.uk/blog/is-the-water-cold"target="_blank">Is the Water Cold?</a> <span class="source">—North Sea Surf Shots</span></li>
+<li><a href="https://northseasurfshots.co.uk/blog/10-christmas-presents-for-scottish-surfers">10 Christmas Presents for Scottish Surfers</a> <span class="source">—North Sea Surf Shots</span></li>
+<li><a href="http://www.theinertia.com/surf/capturing-the-cold-beautiful-gems-of-scotland/"target="_blank">Capturing the Cold Beautiful Gems of Scotland</a> <span class="source">—The Inertia</span></li>
+<li><a href="/published" target="_blank">..see the full list here.</a></li>
 </ul>
 </div>
 
 <div class="projects">
-And some project case studies:
+<h3 class="headings">And some project case studies:</h3>
 
 <div class="projects-wrapper">
 <a href="/north-sea-case-study" class="project-link"><div class="paper">
@@ -103,15 +97,56 @@ And some project case studies:
 </div>
 
 <p>
-When I’m not writing, I run a little <a href="https://northseasurfshots.co.uk" target="_blank">surf photography business</a>. Before that, I fought crime in the Police and saved lives as a lifeguard. If you’ve watched Baywatch, you know what I’m talking about.. you can have a look at my C.V. <a href="https://www.dropbox.com/s/td81mcym3s3z6ig/cv-adamwrites.pdf?dl=0" target="_blank">here</a>.
+When I’m not helping businesses like yours, I write about <a href="http://surfpreneur.co" target="_blank">finding freedom through entrepreneurship</a> and run a little <a href="http://northseasurfshots.co.uk" target="_blank">surf photography business</a>. 
 </p>
 
 <p>
-I’m based in Aberdeen, Scotland, so if I’m not driving around the Scottish coastline looking for waves, you’ll find me doing the same thing in Fuerteventura!
+Before that, I fought crime in the Police and saved lives as a lifeguard. If you’ve watched Baywatch, you know what I’m talking about.. you can have a look at my C.V. <a href="https://www.dropbox.com/s/td81mcym3s3z6ig/cv-adamwrites.pdf?dl=0" target="_blank">here</a>.
 </p>
 
 <p>
-Do you need regular writing to stay connected to your customers, but don’t have the time to sit down and write another blog post? Let’s talk. I love what I do and will write you unique shareable content that speaks to the people who matter.
+But that's enough about me!
+</p>
+
+<p>
+Do you need regular writing to stay connected to your customers, but don’t have the time to sit down and write another blog post?   
+<span class="round">
+    <input type="checkbox" id="checkbox-1" checked/>
+    <label for="checkbox-1"></label>
+  </span>
+</p>
+
+<p>
+Do you have trouble finding commercial use images for your business's blog? Don't know where to start with SEO?
+<span class="round">
+    <input type="checkbox" id="checkbox-2"/>
+    <label for="checkbox-2"></label>
+  </span>
+</p>  
+
+<p>Do you struggle to constantly create fresh content for your email and social media marketing?
+<span class="round">
+    <input type="checkbox" id="checkbox-3" />
+    <label for="checkbox-3"></label>
+  </span>
+</p>
+
+<p>Do you need help with your web presence? Can't quite find those perfect words for your website copy?
+<span class="round">
+    <input type="checkbox" id="checkbox-4" />
+    <label for="checkbox-4"></label>
+  </span>
+  </p>
+
+  <p>Do you want to grow your business by finding and speaking to the right people in the right way?
+<span class="round">
+    <input type="checkbox" id="checkbox-5" />
+    <label for="checkbox-5"></label>
+  </span>
+  </p>
+
+<p>
+Let's talk. I love what I do and will create you unique shareable content that speaks to the people who matter.
 </p>
 
 <center>
@@ -119,16 +154,23 @@ Do you need regular writing to stay connected to your customers, but don’t hav
 	<a href="mailto:hello@adamwrites.co?subject=Hi Adam!">hello@adamwrites.co</a>
 </div>
 
+<div class="pricing">
+<p>I quote all projects at a fixed price, from a full website design with copy to a monthly content retainer, so you'll know exactly what your investing in. I'm excited to hear about your business and work out the value I can provide for your specific business goals. Let's do it! Email for a free consultation.</p>
+</div>
+
 <div class="social">
-	<a href="https://twitter.com/adamelnaggar_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-	<a href="https://linkedin.com/in/adamelnaggar" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+	<a href="http://twitter.com/surfpreneurco" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+	<a href="http://linkedin.com/in/adamelnaggar" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 </div>
 
 </center>
 </div>
+<div class="location">
+<p>Currently home in Aberdeen, Scotland <img class="flag" src="images/gb-sct.svg" alt="Scotland"></p>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="moveimage.js"></script>
+<script src="scroll.js"></script>
 
 </body>
 </html>
