--- a/north-sea-case-study.html
+++ b/north-sea-case-study.html
@@ -32,6 +32,7 @@
 <meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 	<script src="https://use.fontawesome.com/6c953dd7b6.js"></script>
+	<script src="intense.js"></script>
 </head>
 <body>
 <a href="/">
@@ -52,42 +53,42 @@ See it in action: <a href="http://northseasurfshots.co.uk"target="_blank"><i cla
 </div>
 <div class="study-intro">
 <p>
-The only surf photography business in Scotland. I set up North Sea Surf Shots as an outlet for photographs I was taking from the water around the coastline of Scotland, selling prints to sea-loving locals and photo sessions to surfers. The North Sea Surf Shots brand identity is always friendly and <span style="font-style:italic">'stoked'</span>, conveying a genuine love for the sea and local coastline.
+The only surf photography business in Scotland. I set up North Sea Surf Shots as an outlet for photographs I was taking from the water, selling prints to sea-loving locals and photo sessions to surfers. Its brand identity is always friendly and <span style="font-style:italic">'stoked'</span>, conveying a genuine love for the sea and local coastline.
 </p>
 <p>
-Setting up the business involved creating an eCommerce website, creating graphics and imagery for the website and campaigns, and writing copy and content in line with the brand guidelines. The content strategy primarily consisted of regularly posting images to social media to reach target customers, supported by blog posts and social media / email marketing campaigns.
+Setting up involved creating an eCommerce website, creating imagery for the website and campaigns, and writing copy in line with the brand guidelines. The content strategy consisted of regularly posting images to social media to reach target customers, supported by blog posts and social media / email marketing campaigns.
 </p>
 <p>
-North Sea Surf Shots has had coverage in regional press and surfing publications. It has grown a substantial and engaged social following and email list, and created a buzz around surfing in Scotland with surfers and non-surfers alike. It makes steady sales and contributes to Surfers Against Sewage, an environmental charity. Long may it continue!
+North Sea Surf Shots has had coverage in regional press and surfing publications. It has grown an engaged social following and email list, and created a buzz around surfing in Scotland with surfers and non-surfers alike. It makes steady sales and contributes to Surfers Against Sewage, an environmental charity. Long may it continue!
 </p>
 </div>
 
 <div class="website-screenshots side-by-side">
-	<img src="images/nsss-home-screenshot.jpeg" alt="Homepage of North Sea Surf Shots' website." />
-	<img src="images/nsss-aboutprints-screenshot.jpg" alt="About Prints page of North Sea Surf Shots' website." />
+	<img src="images/nsss-home-screenshot.jpeg" alt="Homepage of North Sea Surf Shots' website." class="intense"/>
+	<img src="images/nsss-aboutprints-screenshot.jpg" alt="About Prints page of North Sea Surf Shots' website." class="intense"  />
 	<p class="image-caption">I used Squarespace to create an eCommerce website, and applied custom HTML5 and CSS3 to fine tune details. I researched and wrote targeted website copy and product descriptions, and created graphics and imagery using the Adobe Creative Suite.</p>
 </div>
 
 <div class="website-screenshots side-by-side double-caption">
 <div>
-<img src="images/nsss-blog-screenshot.jpg" alt="Blog post from North Sea Surf Shots' website." />
+<img src="images/nsss-blog-screenshot.jpg" alt="Blog post from North Sea Surf Shots' website." class="intense"/>
 	<p class="image-caption">I wrote blog posts designed to be helpful and shareable for the target audience.</p>
 	</div>
 	<div>
-<img src="images/video-thumbnail.png" alt="Video thumbnail for a video created to support a giveaway campaign." />
+<img src="images/video-thumbnail.png" alt="Video thumbnail for a video created to support a giveaway campaign." class="intense" />
 	<p class="image-caption">I ran social media advertising and giveaway campaigns, making use of different media formats including video.</p>
 	</div>
 	</div>
 
 <div class="website-screenshots side-by-side">
-<img src="images/nsss-vitaminsea-screenshot.jpeg" alt="Newsletter Page for North Sea Surf Shots' website." />
-	<img src="images/nsss-email-screenshot.jpeg" alt="An example email campaign sent to subscribers." />
+<img src="images/nsss-vitaminsea-screenshot.jpeg" alt="Newsletter Page for North Sea Surf Shots' website." class="intense"/>
+	<img src="images/nsss-email-screenshot.jpeg" alt="An example email campaign sent to subscribers." class="intense" />
 	<p class="image-caption">I created a content giveaway to grow North Sea Surf Shots’ email list. I created automated email marketing workflows using MailerLite and Mailchimp.</p>
 	</div>
 
 	<div class="website-screenshots side-by-side">
-<img src="images/giftvoucher.jpg" alt="Gift Voucher in print for sale in the eCommerce shop." />
-<img src="images/flyer.jpg" alt="Flyer handed out to local surfers." />
+<img src="images/giftvoucher.jpg" alt="Gift Voucher in print for sale in the eCommerce shop." class="intense"/>
+<img src="images/flyer.jpg" alt="Flyer handed out to local surfers." class="intense"/>
 	<p class="image-caption">I designed and wrote copy for printed marketing material, including flyers and vouchers.</p>
 	</div>
 
@@ -97,17 +98,14 @@ North Sea Surf Shots has had coverage in regional press and surfing publications
 <div class="share">
 			<span class="share__text">Share</span>
 			<ul class="share__list">
-				<li class="share__item">
-					<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//adamwrites.co/north-sea-case-study" class="share__link" target="_blank"><i class="fa fa-facebook"></i></a>
+							<li class="share__item">
+					<a href="https://twitter.com/home?status=Check%20out%20this%20surf%20photography%20business%20case%20study%20by%20%40surfpreneurco%20http%3A//adamwrites.co/north-sea-case-study" class="share__link" target="_blank"><i class="fa fa-twitter"></i></a>
 				</li>
-				<li class="share__item">
+								<li class="share__item">
 					<a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//adamwrites.co/north-sea-case-study&title=A%20Surf%20Photography%20Business%20Case%20Study&summary=A%20look%20at%20the%20media,%20marketing,%20and%20writing%20behind%20the%20surf%20photography%20business,%20North%20Sea%20Surf%20Shots.&source=" class="share__link" target="_blank"><i class="fa fa-linkedin"></i></a>
 				</li>
 				<li class="share__item">
-					<a href="https://twitter.com/home?status=Check%20out%20this%20surf%20photography%20business%20case%20study%20by%20%40adamelnaggar_%20http%3A//adamwrites.co/north-sea-case-study" class="share__link" target="_blank"><i class="fa fa-twitter"></i></a>
-				</li>
-<li class="share__item">
-					<a href="http://reddit.com/submit?url=http://adamwrites.co/north-sea-case-study&amp;title=Surf Photography Business Case Study" class="share__link" target="_blank"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a>
+					<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//adamwrites.co/north-sea-case-study" class="share__link" target="_blank"><i class="fa fa-facebook"></i></a>
 				</li>
 				<li class="share__item">
 					<a href="mailto:?subject=Surf photography business case study!&body=Check it out here: http://adamwrites.co/north-sea-case-study" class="share__link"><i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -118,7 +116,15 @@ North Sea Surf Shots has had coverage in regional press and surfing publications
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="moveimage.js"></script>
+<script src="scroll.js"></script>
+	<script>
+	if (/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)) {
+}
+else {
+				var elements = document.querySelectorAll( '.intense' );
+			Intense( elements );
+		}
+		</script>
 
 </body>
 </html>
