--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ I've worked with some awesome people, like
 <h3 class="headings">Here's some published work:</h3>
 <ul class="writing-examples">
 <li><a href="http://medium.com/personal-growth/write-like-nobodys-reading-42a105b72f3"target="_blank">Write Like Nobody's Reading</a> <span class="source">—Personal Growth</span></li>
-<li><a href="http://northseasurfshots.co.uk/blog/is-the-water-cold"target="_blank">Is the Water Cold?</a> <span class="source">—North Sea Surf Shots</span></li>
+<li><a href="https://surfpreneur.co/sell-photos-online-photography-business/"target="_blank">How I Sell Photos Online: Starting a Photography Business</a> <span class="source">—Surfpreneur</span></li>
 <li><a href="https://northseasurfshots.co.uk/blog/10-christmas-presents-for-scottish-surfers">10 Christmas Presents for Scottish Surfers</a> <span class="source">—North Sea Surf Shots</span></li>
 <li><a href="http://www.theinertia.com/surf/capturing-the-cold-beautiful-gems-of-scotland/"target="_blank">Capturing the Cold Beautiful Gems of Scotland</a> <span class="source">—The Inertia</span></li>
 <li><a href="/published" target="_blank">..see the full list here.</a></li>
