--- a/published.html
+++ b/published.html
@@ -63,7 +63,8 @@
 <div class="clips">
 <h3 class="headings">Surfpreneur</h3>
 <ul class="writing-examples">
-<li></li>
+<li><a href="https://surfpreneur.co/8-reasons-i-started-this-blog/"target="_blank">8 Reasons I Started This Blog</a></li>
+<li><a href="https://surfpreneur.co/sell-photos-online-photography-business/"target="_blank">How I Sell Photos Online: Starting a Photography Business</a></li>
 </ul>
 </div>
 
