Change current location

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@ Let's talk. I love what I do and will create you unique shareable content that s
 </center>
 </div>
 <div class="location">
-<p>Currently home in Aberdeen, Scotland <img class="flag" src="images/gb-sct.svg" alt="Scotland"></p>
+<!-- <p>Currently home in Aberdeen, Scotland <img class="flag" src="images/gb-sct.svg" alt="Scotland"></p> -->
+<p>Currently in Fuerteventura, Spain <img class="flag" src="images/es.svg" alt="Spain"></p>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
