--- a/index.html
+++ b/index.html
@@ -97,15 +97,7 @@ I've worked with some awesome people, like
 </div>
 
 <p>
-When I’m not helping businesses like yours, I write about <a href="http://surfpreneur.co" target="_blank">finding freedom through entrepreneurship</a> and run a little <a href="http://northseasurfshots.co.uk" target="_blank">surf photography business</a>. 
-</p>
-
-<p>
-Before that, I fought crime in the Police and saved lives as a lifeguard. If you’ve watched Baywatch, you know what I’m talking about.. you can have a look at my C.V. <a href="https://www.dropbox.com/s/td81mcym3s3z6ig/cv-adamwrites.pdf?dl=0" target="_blank">here</a>.
-</p>
-
-<p>
-But that's enough about me!
+When I’m not helping businesses like yours, I work as a surf and SUP instructor in between Scotland and Fuerteventura, write about <a href="http://surfpreneur.co" target="_blank">my own small business projects</a> and run a little <a href="http://northseasurfshots.co.uk" target="_blank">surf photography business</a>. But that's enough about me!
 </p>
 
 <p>
@@ -159,14 +151,15 @@ Let's talk. I love what I do and will create you unique shareable content that s
 </div>
 
 <div class="social">
-	<a href="http://twitter.com/surfpreneurco" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+	<a href="http://instagram.com/adamandthesea" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 	<a href="http://linkedin.com/in/adamelnaggar" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+	<a href="http://twitter.com/adamandthesea" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 </div>
 
 </center>
 </div>
 <div class="location">
-<!-- <p>Currently home in Aberdeen, Scotland <img class="flag" src="images/gb-sct.svg" alt="Scotland"></p> -->
+<!-- <p>Currently home in Sandend, Scotland <img class="flag" src="images/gb-sct.svg" alt="Scotland"></p> -->
 <p>Currently in Fuerteventura, Spain <img class="flag" src="images/es.svg" alt="Spain"></p>
 </div>
 
