--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ I've worked with some awesome people, like
 </div>
 
 <p>
-When I’m not helping businesses like yours, I work as a surf and SUP instructor in between Scotland and Fuerteventura, write about <a href="http://surfpreneur.co" target="_blank">my own small business projects</a> and run a little <a href="http://northseasurfshots.co.uk" target="_blank">surf photography business</a>. But that's enough about me!
+When I’m not helping businesses like yours, I work as a surf and SUP instructor in between Scotland and Fuerteventura, write about <a href="http://surfpreneur.co" target="_blank">my own small business projects</a>, and run a little <a href="http://northseasurfshots.co.uk" target="_blank">surf photography business</a>. But that's enough about me!
 </p>
 
 <p>
