Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 <meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 	<script src="https://use.fontawesome.com/6c953dd7b6.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125680309-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125680309-1');
+</script>
 </head>
 <body>
 <div class="wrapper">
