--- a/north-sea-case-study.html
+++ b/north-sea-case-study.html
@@ -33,6 +33,15 @@
 <meta name="theme-color" content="#ffffff">
 	<script src="https://use.fontawesome.com/6c953dd7b6.js"></script>
 	<script src="intense.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125680309-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125680309-1');
+</script>
 </head>
 <body>
 <a href="/">
